# MLOps

./: README.md  branch_test_file.py
s_2/cookie/: README.md  pyproject 2.toml  pyproject.toml  tasks 2.py  tasks.py
s_2/cookie/.devcontainer/: devcontainer.json
s_2/cookie/dockerfiles/: api.dockerfile  evaluate.dockerfile  train.dockerfile
s_2/cookie/docs/: mkdocs.yaml
s_2/cookie/docs/source/: index.md
s_2/cookie/models/: trained_model.pth
s_2/cookie/src/cookie_test/: data.py  evaluate.py  main.py  model.py  train.py  visualize.py
s_2/cookie/src/cookie_test/data/processed/: test_target_processed.pt  train_target_processed.pt
s_2/cookie/tests/: test_data 2.py
